More dynamic image paths

--- a/assets/cv/cv.tex
+++ b/assets/cv/cv.tex
@@ -57,7 +57,7 @@
 
 \null\hfill\begin{tikzpicture}
     \clip (0,0) circle(2.1cm);
-    \node at (0,0){\includegraphics[width=4.8cm,height=4.8cm]{me.png}};
+    \node at (0,0){\includegraphics[width=4.8cm,height=4.8cm]{../images/me.png}};
 \end{tikzpicture}\hfill\null
 
 \vspace*{1.7ex}
